--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
       <ul class="nav-list">
         <select></select>
-        <li><a href="a.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li class="dropdown">
           <a href="#" class="dropbtn">Projects ▾</a>
           <div class="dropdown-content">
@@ -350,7 +350,7 @@
 
       <div class="footer-col">
         <h3>Quick Links</h3>
-        <a href="a.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="index.html#projects">Projects</a>
         <a href="contact.html">Contact Us</a>
