Fix base path and asset links

--- a/index.html
+++ b/index.html
@@ -1,17 +1,42 @@
 <!doctype html>
 <html lang="en">
-
 <head>
+
+  <!-- GitHub Pages base path -->
+  <base href="/real_estate-project/">
+
+  <!-- Basic SEO -->
   <title>Apex Landbase | Real Estate Consultants in Delhi NCR</title>
   <meta charset="utf-8">
-  <meta name="description"
-    content="Apex Landbase is a trusted real estate advisory offering residential & commercial properties in Delhi NCR with expert consultation.">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="robots" content="index, follow">
-  <link rel="stylesheet" href="/editing/CSS/style.css">
-  <link rel="canonical" href="https://apexlandbase.com">
-</head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <!-- Meta Description -->
+  <meta name="description" content="Apex Landbase is a trusted real estate consultancy in Delhi NCR offering premium residential & commercial properties with expert guidance.">
+
+  <!-- SEO Meta -->
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="Apex Landbase">
+
+  <!-- Open Graph (Facebook / WhatsApp) -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Apex Landbase | Real Estate Consultants in Delhi NCR">
+  <meta property="og:description" content="Trusted real estate consultants in Delhi NCR for residential & commercial properties.">
+  <meta property="og:url" content="https://yogita-2004.github.io/real_estate-project/">
+  <meta property="og:image" content="https://yogita-2004.github.io/real_estate-project/img/og-image.webp">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Apex Landbase | Real Estate Consultants in Delhi NCR">
+  <meta name="twitter:description" content="Expert real estate consultancy in Delhi NCR for premium residential & commercial projects.">
+  <meta name="twitter:image" content="https://yogita-2004.github.io/real_estate-project/img/og-image.webp">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="/editing/CSS/style.css">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://apexlandbase.com">
+
+</head>
 <body>
 
   <!-- TOP HEADER -->
@@ -34,7 +59,7 @@
   <nav class="navbar" aria-label="Primary Navigation">
     <div class="nav-container">
       <!-- LEFT: Logo -->
-      <a href="a.html" class="logo" aria-label="Apex Landbase Home">
+      <a href="index.html" class="logo" aria-label="Apex Landbase Home">
         <img src="/img/image.png" alt="Apex Landbase logo" fetchpriority="high">
         <span class="brand">APEX LANDBASE</span>
       </a>
