Fix base path and asset links

--- a/terms-condition.html
+++ b/terms-condition.html
@@ -65,7 +65,7 @@
 
       <ul class="nav-list">
         <select></select>
-        <li><a href="a.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li class="dropdown">
           <a href="#" class="dropbtn">Projects ▾</a>
           <div class="dropdown-content">
