--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
       </div>
 
       <ul class="nav-list">
-        <li><a href="a.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
 
         <li class="dropdown">
           <a class="dropbtn">Projects ▾</a>
@@ -178,7 +178,7 @@
 
       <div class="footer-col">
         <h3>Quick Links</h3>
-        <a href="a.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="index.html#projects">Projects</a>
         <a href="contact.html">Contact Us</a>
