Website updates HTML CSS JS

--- a/index.html
+++ b/index.html
@@ -264,12 +264,12 @@
           </div>
         </a>
 
-      </div><!-- ✅ property-grid END -->
+      </div><!--  property-grid END -->
 
       <!-- RIGHT ARROW -->
       <button class="arrow right" aria-label="Next">›</button>
 
-    </div><!-- ✅ property-slider END -->
+    </div><!-- property-slider END -->
 
     <!-- DOTS (optional) -->
     <div class="slider-dots"></div>
@@ -390,7 +390,7 @@
     </div>
 
     <div class="footer-bottom">
-      <p>copyright © 2024, apexlandbase | Made By Brandtisers Media</p>
+      <p>copyright © 2026, apexlandbase | Made By Yogita (yogita11i.sns@gmail.com)</p>
     </div>
   </footer>
   <!-- TOAST -->
