--- a/privacy.html
+++ b/privacy.html
@@ -167,16 +167,16 @@
 
     <div class="footer-col">
       <h3>Builders</h3>
-      <a href="#">DLF</a>
-      <a href="#">SHOBHA</a>
-      <a href="#">CENTRAL PARK</a>
-      <a href="#">GODREJ</a>
+      <a href="/dlf/index.html">DLF</a>
+      <a href="/shobha/index.html">SHOBHA</a>
+      <a href="/delphine/index.html">CENTRAL PARK</a>
+      <a href="/godrej/index.html">GODREJ</a>
     </div>
 
   </div>
 
   <div class="footer-bottom">
-    <p>copyright © 2024, apexlandbase | Made By Brandtisers Media</p>
+    <p>copyright © 2026, apexlandbase | Made By Yogita (yogita11i.sns@gmail.com)</p>
   </div>
 </footer>
 
