--- a/dlf/index.html
+++ b/dlf/index.html
@@ -181,6 +181,33 @@
     <li>Future-ready infrastructure corridor</li>
   </ul>
 </section>
+<!-- ===== APEX LANDBASE : COMMON POPUP FORM ===== -->
+<div id="apexPopupBg" class="apex-popup-bg">
+  <div class="apex-popup-box">
+
+    <button id="apexPopupClose" class="apex-popup-close" aria-label="Close popup">
+      &times;
+    </button>
+
+    <div class="apex-popup-header">
+      <img src="/img/image.png" alt="Apex Landbase Logo">
+      <h3>Get Exclusive Details</h3>
+      <p>Register now to receive price, floor plan & offers</p>
+    </div>
+
+    <form id="apexLeadForm" class="apex-lead-form" autocomplete="off">
+      <input type="text" id="apex-name" placeholder="Your Name">
+      <input type="email" id="apex-email" placeholder="Email Address">
+      <input type="tel" id="apex-phone" placeholder="Phone Number">
+
+      <!-- page tracking -->
+      <input type="hidden" id="apex-page">
+
+      <button type="submit" class="apex-submit-btn">Submit</button>
+    </form>
+
+  </div>
+</div>
 
 <!-- ================= CONTACT ================= -->
 <section id="contact" class="contact-section">
