--- a/max361/index.html
+++ b/max361/index.html
@@ -162,49 +162,43 @@
     </div>
   </section>
   <!-- ================= MASTER PLAN ================= -->
-<section id="masterplan" class="apex-masterplan">
+  <section id="masterplan" class="apex-masterplan">
 
-  <div class="container master-wrap">
+    <div class="container master-wrap">
 
-    <!-- LEFT : MASTER PLAN IMAGES -->
-    <div class="master-image slider">
-      <img src="/max361/images/master1.webp"
-           class="mp1"
-           alt="MAX Estate Master Plan Layout"
-           loading="lazy">
+      <!-- LEFT : MASTER PLAN IMAGES -->
+      <div class="master-image slider">
+        <img src="/max361/images/master1.webp" class="mp1" alt="MAX Estate Master Plan Layout" loading="lazy">
 
-      <img src="/max361/images/master2.webp"
-           class="mp2"
-           alt="MAX Estate Site Layout Plan"
-           loading="lazy">
-    </div>
+        <img src="/max361/images/master2.webp" class="mp2" alt="MAX Estate Site Layout Plan" loading="lazy">
+      </div>
 
-    <!-- RIGHT : CONTENT -->
-    <div class="master-content">
+      <!-- RIGHT : CONTENT -->
+      <div class="master-content">
 
-      <h2 class="apex-title">Master Plan</h2>
-      <span class="apex-line"></span>
+        <h2 class="apex-title">Master Plan</h2>
+        <span class="apex-line"></span>
 
-      <p>
-        Thoughtfully planned community with central green spaces,
-        seamless circulation, and well-defined residential zones
-        designed for comfort, safety, and sustainability.
-      </p>
+        <p>
+          Thoughtfully planned community with central green spaces,
+          seamless circulation, and well-defined residential zones
+          designed for comfort, safety, and sustainability.
+        </p>
 
-      <ul class="master-list">
-        <li>Central green spine across the development</li>
-        <li>Clearly demarcated residential clusters</li>
-        <li>Dedicated lifestyle & amenity zones</li>
-        <li>Vehicular-free internal green spaces</li>
-        <li>Efficient entry & exit planning</li>
-      </ul>
+        <ul class="master-list">
+          <li>Central green spine across the development</li>
+          <li>Clearly demarcated residential clusters</li>
+          <li>Dedicated lifestyle & amenity zones</li>
+          <li>Vehicular-free internal green spaces</li>
+          <li>Efficient entry & exit planning</li>
+        </ul>
+
+      </div>
 
     </div>
 
-  </div>
-
-</section>
-<!-- ================= END MASTER PLAN ================= -->
+  </section>
+  <!-- ================= END MASTER PLAN ================= -->
 
   <!-- ================= GALLERY ================= -->
   <section id="gallery">
@@ -305,6 +299,33 @@
     </div>
 
   </section>
+  <!-- ===== APEX LANDBASE : COMMON POPUP FORM ===== -->
+  <div id="apexPopupBg" class="apex-popup-bg">
+    <div class="apex-popup-box">
+
+      <button id="apexPopupClose" class="apex-popup-close" aria-label="Close popup">
+        &times;
+      </button>
+
+      <div class="apex-popup-header">
+        <img src="/img/image.png" alt="Apex Landbase Logo">
+        <h3>Get Exclusive Details</h3>
+        <p>Register now to receive price, floor plan & offers</p>
+      </div>
+
+      <form id="apexLeadForm" class="apex-lead-form" autocomplete="off">
+        <input type="text" id="apex-name" placeholder="Your Name">
+        <input type="email" id="apex-email" placeholder="Email Address">
+        <input type="tel" id="apex-phone" placeholder="Phone Number">
+
+        <!-- page tracking -->
+        <input type="hidden" id="apex-page">
+
+        <button type="submit" class="apex-submit-btn">Submit</button>
+      </form>
+
+    </div>
+  </div>
 
   <!-- ================= CONTACT ================= -->
   <section id="contact" class="contact-section">
@@ -357,29 +378,29 @@
     </p>
   </footer>
   <!-- ================= BROCHURE MODAL ================= -->
-<div id="brochurePopup" class="brochure-modal">
+  <div id="brochurePopup" class="brochure-modal">
 
-  <div class="modal-box">
+    <div class="modal-box">
 
-    <!-- CLOSE BUTTON -->
-    <span class="close-modal" onclick="closeBrochure()">×</span>
+      <!-- CLOSE BUTTON -->
+      <span class="close-modal" onclick="closeBrochure()">×</span>
 
-    <h3>Download Brochure</h3>
-    <p>Please fill your details to get the brochure</p>
+      <h3>Download Brochure</h3>
+      <p>Please fill your details to get the brochure</p>
 
-    <form id="brochureForm" onsubmit="submitBrochure(event)">
+      <form id="brochureForm" onsubmit="submitBrochure(event)">
 
-      <input type="text" placeholder="Your Name" required>
-      <input type="tel" placeholder="Phone Number" required>
-      <input type="email" placeholder="Email Address" required>
+        <input type="text" placeholder="Your Name" required>
+        <input type="tel" placeholder="Phone Number" required>
+        <input type="email" placeholder="Email Address" required>
 
-      <button type="submit">Submit & Download</button>
+        <button type="submit">Submit & Download</button>
 
-    </form>
+      </form>
+
+    </div>
 
   </div>
-
-</div>
   <script src="/js/max.js" defer></script>
 
 </body>
