--- a/shobha/index.html
+++ b/shobha/index.html
@@ -32,7 +32,7 @@
         <span class="project">ARANYA</span>
         <small class="tagline">AT KARMA LAKELANDS</small>
       </div>
-  
+
 
       <nav class="menu" aria-label="Main navigation">
         <a href="#overview">Overview</a>
@@ -101,45 +101,45 @@
       </div>
     </div>
   </section>
-<!-- ================= RESIDENTIAL SECTION ================= -->
-<section class="residential" id="residential">
-  <div class="residential-wrap">
+  <!-- ================= RESIDENTIAL SECTION ================= -->
+  <section class="residential" id="residential">
+    <div class="residential-wrap">
 
-    <!-- LEFT CONTENT -->
-    <div class="residential-content">
-      <span class="section-tag">Residential</span>
+      <!-- LEFT CONTENT -->
+      <div class="residential-content">
+        <span class="section-tag">Residential</span>
 
-      <h2>
-        Thoughtfully Designed<br>
-        Luxury Residences
-      </h2>
+        <h2>
+          Thoughtfully Designed<br>
+          Luxury Residences
+        </h2>
 
-      <p class="residential-desc">
-        Experience refined living spaces crafted with a perfect balance
-        of elegance, comfort, and functionality. Each residence is designed
-        to offer abundant natural light, ventilation, and privacy.
-      </p>
+        <p class="residential-desc">
+          Experience refined living spaces crafted with a perfect balance
+          of elegance, comfort, and functionality. Each residence is designed
+          to offer abundant natural light, ventilation, and privacy.
+        </p>
 
-      <ul class="residential-points">
-        <li>Spacious 3 & 4 BHK Residences</li>
-        <li>Large Balconies with Green Views</li>
-        <li>Premium Finishes & Smart Layouts</li>
-        <li>Low-Density Living Concept</li>
-      </ul>
+        <ul class="residential-points">
+          <li>Spacious 3 & 4 BHK Residences</li>
+          <li>Large Balconies with Green Views</li>
+          <li>Premium Finishes & Smart Layouts</li>
+          <li>Low-Density Living Concept</li>
+        </ul>
 
-      <div class="residential-btns">
-        <a href="/max361/brochure/max361.pdf" class="btn-primary">Download Brochure</a>
-        <a href="#" class="btn-outline">Get Price Details</a>
+        <div class="residential-btns">
+          <a href="/max361/brochure/max361.pdf" class="btn-primary">Download Brochure</a>
+          <a href="#" class="btn-outline">Get Price Details</a>
+        </div>
       </div>
-    </div>
 
-    <!-- RIGHT IMAGE -->
-    <div class="residential-image">
-      <img src="/shobha/images/residential.webp" alt="Luxury Residential Living">
-    </div>
+      <!-- RIGHT IMAGE -->
+      <div class="residential-image">
+        <img src="/shobha/images/residential.webp" alt="Luxury Residential Living">
+      </div>
 
-  </div>
-</section>
+    </div>
+  </section>
   <!-- ================= MASTER PLAN ================= -->
   <section id="masterplan">
     <div class="container master-wrap">
@@ -227,6 +227,33 @@
     </div>
 
   </section>
+  <!-- ===== APEX LANDBASE : COMMON POPUP FORM ===== -->
+  <div id="apexPopupBg" class="apex-popup-bg">
+    <div class="apex-popup-box">
+
+      <button id="apexPopupClose" class="apex-popup-close" aria-label="Close popup">
+        &times;
+      </button>
+
+      <div class="apex-popup-header">
+        <img src="/img/image.png" alt="Apex Landbase Logo">
+        <h3>Get Exclusive Details</h3>
+        <p>Register now to receive price, floor plan & offers</p>
+      </div>
+
+      <form id="apexLeadForm" class="apex-lead-form" autocomplete="off">
+        <input type="text" id="apex-name" placeholder="Your Name">
+        <input type="email" id="apex-email" placeholder="Email Address">
+        <input type="tel" id="apex-phone" placeholder="Phone Number">
+
+        <!-- page tracking -->
+        <input type="hidden" id="apex-page">
+
+        <button type="submit" class="apex-submit-btn">Submit</button>
+      </form>
+
+    </div>
+  </div>
   <!-- ================= CONTACT ================= -->
   <section id="contact" class="contact-section">
     <div class="contact-wrap">
@@ -265,29 +292,29 @@
     </p>
   </footer>
   <!-- ================= BROCHURE MODAL ================= -->
-<div id="brochurePopup" class="brochure-modal">
+  <div id="brochurePopup" class="brochure-modal">
 
-  <div class="modal-box">
+    <div class="modal-box">
 
-    <!-- CLOSE BUTTON -->
-    <span class="close-modal" onclick="closeBrochure()">×</span>
+      <!-- CLOSE BUTTON -->
+      <span class="close-modal" onclick="closeBrochure()">×</span>
 
-    <h3>Download Brochure</h3>
-    <p>Please fill your details to get the brochure</p>
+      <h3>Download Brochure</h3>
+      <p>Please fill your details to get the brochure</p>
 
-    <form id="brochureForm" onsubmit="submitBrochure(event)">
+      <form id="brochureForm" onsubmit="submitBrochure(event)">
 
-      <input type="text" placeholder="Your Name" required>
-      <input type="tel" placeholder="Phone Number" required>
-      <input type="email" placeholder="Email Address" required>
+        <input type="text" placeholder="Your Name" required>
+        <input type="tel" placeholder="Phone Number" required>
+        <input type="email" placeholder="Email Address" required>
 
-      <button type="submit">Submit & Download</button>
+        <button type="submit">Submit & Download</button>
 
-    </form>
+      </form>
+
+    </div>
 
   </div>
-
-</div>
   <!-- JS -->
   <script src="/js/shobha.js" defer></script>
 
