Website updates HTML CSS JS

--- a/elan/index.html
+++ b/elan/index.html
@@ -335,27 +335,58 @@
 
     </div>
   </div>
+<!-- ================= CONTACT ================= -->
+<section id="contact" class="contact-section">
+  <div class="contact-wrap">
 
+    <div class="contact-text">
+      <h2>Enquire Now</h2>
+      <p>
+        Get complete details about pricing, floor plans and exclusive offers for
+        <strong>Elan The Statement</strong> – an ultra-luxury residential development
+        in Sector 49, Gurugram.
+      </p>
 
-  <!-- ================= CONTACT ================= -->
-  <section id="contact" class="contact-section">
-    <div class="contact-wrap">
-
-      <div class="contact-text">
-        <h2>Enquire Now</h2>
-        <p>Get price, floor plans & exclusive offers for Elan The Statement.</p>
-      </div>
-
-      <form class="contact-form">
-        <input type="text" placeholder="Your Name" required>
-        <input type="tel" placeholder="Phone Number" required>
-        <input type="email" placeholder="Email Address" required>
-        <button type="submit">Submit Enquiry</button>
-      </form>
-
+      <ul>
+        <li>✔ Ultra-Luxury Residences with Premium Finishes</li>
+        <li>✔ Prime Location – Sector 49, Gurugram</li>
+        <li>✔ Smart Living with Home Automation</li>
+        <li>✔ Developed by Elan Group</li>
+      </ul>
     </div>
-  </section>
-  <!-- ================= BROCHURE MODAL ================= -->
+
+    <form class="contact-form">
+      <input type="text" placeholder="Your Name" required>
+      <input type="tel" placeholder="Phone Number" required>
+      <input type="email" placeholder="Email Address" required>
+      <button type="submit">Submit Enquiry</button>
+    </form>
+
+  </div>
+</section>
+
+<!-- ================= FOOTER ================= -->
+<footer class="lp-footer">
+  <div class="footer-divider"></div>
+
+  <p>
+    <strong>RERA Project Registration No.:</strong>
+    HARERA Regn. No. 125 of 2023
+  </p>
+
+  <p>
+    <strong>Site Address:</strong>
+    Elan The Statement, Sector 49,
+    Gurugram, Haryana
+  </p>
+
+  <p>
+    Disclaimer: This website is for information purposes only and does not
+    constitute an offer to sell. Project details are indicative and subject
+    to change. Marketed by <strong>Apex Landbase</strong>.
+  </p>
+</footer>
+   <!-- ================= BROCHURE MODAL ================= -->
   <div id="brochurePopup" class="brochure-modal">
 
     <div class="modal-box">
@@ -379,18 +410,6 @@
     </div>
 
   </div>
-
-  <!-- ================= FOOTER ================= -->
-  <footer class="lp-footer">
-    <p>
-      <strong>RERA:</strong> Elan The Statement – HARERA Regn. No. 125 of 2025
-    </p>
-
-    <p>
-      Disclaimer: This website is for information purposes only and does not
-      constitute an offer. Marketed by <strong>Apex Landbase</strong>.
-    </p>
-  </footer>
 
   <!-- SAME JS AS MAX -->
   <script src="/js/elan.js" defer></script>
