--- a/emaar/index.html
+++ b/emaar/index.html
@@ -160,7 +160,7 @@
       </div>
 
       <div class="master-content">
-        <h2 class="apex-title">Master Plan</h2>
+        <h2 class="apex-title">Master Plan/Floor plan</h2>
         <span class="apex-line"></span>
 
         <p>
@@ -176,6 +176,8 @@
           <li>Vehicular-free internal green spaces</li>
           <li>Efficient traffic planning</li>
         </ul>
+        <a href="/emaar/brochure/emaar.pdf" class="floorplan-btn" target="_blank" download>
+          Download All Master/Floor Plans</a>
       </div>
 
     </div>
