--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-<!-- Basic SEO -->
+  <!-- Basic SEO -->
   <title>Apex Landbase | Real Estate Consultants in Delhi NCR</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Meta Description -->
-  <meta name="description" content="Apex Landbase is a trusted real estate consultancy in Delhi NCR offering premium residential & commercial properties with expert guidance.">
+  <meta name="description"
+    content="Apex Landbase is a trusted real estate consultancy in Delhi NCR offering premium residential & commercial properties with expert guidance.">
 
   <!-- SEO Meta -->
   <meta name="robots" content="index, follow">
@@ -16,14 +18,16 @@
   <!-- Open Graph (Facebook / WhatsApp) -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Apex Landbase | Real Estate Consultants in Delhi NCR">
-  <meta property="og:description" content="Trusted real estate consultants in Delhi NCR for residential & commercial properties.">
+  <meta property="og:description"
+    content="Trusted real estate consultants in Delhi NCR for residential & commercial properties.">
   <meta property="og:url" content="https://yogita-2004.github.io/real_estate-project/">
   <meta property="og:image" content="https://yogita-2004.github.io/real_estate-project/img/og-image.webp">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Apex Landbase | Real Estate Consultants in Delhi NCR">
-  <meta name="twitter:description" content="Expert real estate consultancy in Delhi NCR for premium residential & commercial projects.">
+  <meta name="twitter:description"
+    content="Expert real estate consultancy in Delhi NCR for premium residential & commercial projects.">
   <meta name="twitter:image" content="https://yogita-2004.github.io/real_estate-project/img/og-image.webp">
 
   <!-- CSS -->
@@ -33,6 +37,7 @@
   <link rel="canonical" href="https://apexlandbase.com">
 
 </head>
+
 <body>
 
   <!-- TOP HEADER -->
@@ -307,34 +312,34 @@
       </div>
     </div>
   </section>
-  
+
   <div id="formPopupBg" class="popup-bg">
 
-  <div class="popup-box">
+    <div class="popup-box">
 
-    <button id="closeFormPopup" class="close-popup">&times;</button>
+      <button id="closeFormPopup" class="close-popup">&times;</button>
 
-    <div class="popup-image-wrap">
-      <img src="/img/form.png.jpg" alt="Form">
-    </div>
+      <div class="popup-image-wrap">
+        <img src="/img/form.png.jpg" alt="Form">
+      </div>
 
-    <div class="popup-content">
-      <h3 class="popup-title">
-        Connect with Our Property Consultant Today
-      </h3>
+      <div class="popup-content">
+        <h3 class="popup-title">
+          Connect with Our Property Consultant Today
+        </h3>
 
-      <form id="formPopup">
-        <input type="text" id="fp-name" name="name" placeholder="Name" required>
-        <input type="email" id="fp-email" name="email" placeholder="Email" required>
-        <input type="tel" id="fp-phone" name="phone" placeholder="Mobile Number" required>
+        <form id="formPopup">
+          <input type="text" id="fp-name" name="name" placeholder="Name" required>
+          <input type="email" id="fp-email" name="email" placeholder="Email" required>
+          <input type="tel" id="fp-phone" name="phone" placeholder="Mobile Number" required>
 
-        <button type="submit">Submit</button>
-      </form>
+          <button type="submit">Submit</button>
+        </form>
+      </div>
+
     </div>
 
   </div>
-
-</div>
 
   <!-- CONTACT CALL / WHATSAPP POPUP -->
   <div id="contactChoice" class="contact-choice">
@@ -353,14 +358,28 @@
 
       <div class="footer-col">
         <h3>Contact Us</h3>
-        <p>📞 +91 9999074263</p>
-        <p>✉ info@apexlandbase.com</p>
-        <p>
-          📍 Office No.28, Core-A, 2nd Floor Silverton Tower,<br>
-          Sector-50, Gurugram-122018, Haryana
+
+        <p class="footer-item">
+          <span class="icon">📞</span>
+          <span>+91 9999074263</span>
+        </p>
+
+        <p class="footer-item">
+          <span class="icon">✉️</span>
+          <span>info@apexlandbase.com</span>
+        </p>
+
+        <p class="footer-item">
+          <span class="icon">📍</span>
+          <span>
+            Office No.28, Core-A,<br>
+            2nd Floor Silverton Tower,<br>
+            Sector-50, Gurugram – 122018, Haryana
+          </span>
         </p>
 
         <h4>Follow Us On</h4>
+
         <div class="footer-social">
           <a href="https://www.facebook.com/ApexLandbase"><img src="/img/fb.png" loading="lazy" alt="facebook"></a>
           <a href="https://www.instagram.com/apexlandbase"><img src="/img/insta.png" loading="lazy" alt="instagram"></a>
@@ -390,32 +409,32 @@
     </div>
 
     <div class="footer-bottom">
-      <p>copyright © 2026, apexlandbase | Made By Yogita (yogita11i.sns@gmail.com)</p>
+      <p>copyright © 2026, apexlandbase</p>
     </div>
   </footer>
   <!-- TOAST -->
-<div id="toast" class="toast"></div>
+  <div id="toast" class="toast"></div>
 
-<!-- EMAILJS -->
-<script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-<script>
-  emailjs.init("Jt6Vp9_-hORbbxZ79");
-</script>
+  <!-- EMAILJS -->
+  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+  <script>
+    emailjs.init("Jt6Vp9_-hORbbxZ79");
+  </script>
 
-<!-- SUPABASE -->
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<script>
-  const SUPABASE_URL = "https://naipydrihdzbjohfrypu.supabase.co";
-  const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5haXB5ZHJpaGR6YmpvaGZyeXB1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY4OTgwODUsImV4cCI6MjA4MjQ3NDA4NX0.JlRuujtS0t8G67X7RYqWVvxuqvRhFgqeng8OOlELJok";
+  <!-- SUPABASE -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script>
+    const SUPABASE_URL = "https://naipydrihdzbjohfrypu.supabase.co";
+    const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5haXB5ZHJpaGR6YmpvaGZyeXB1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY4OTgwODUsImV4cCI6MjA4MjQ3NDA4NX0.JlRuujtS0t8G67X7RYqWVvxuqvRhFgqeng8OOlELJok";
 
-  window.supabase = window.supabase.createClient(
-    SUPABASE_URL,
-    SUPABASE_KEY
-  );
-</script>
+    window.supabase = window.supabase.createClient(
+      SUPABASE_URL,
+      SUPABASE_KEY
+    );
+  </script>
 
-<!-- MAIN JS -->
-<script src="/js/script.js"></script>
+  <!-- MAIN JS -->
+  <script src="/js/script.js"></script>
 
 </body>
 
