Website updates HTML CSS Js

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         </a>
 
         <!-- THE WESTIN RESIDENCES -->
-        <a href="#" class="property-card">
+        <a href="/whiteland/index.html" class="property-card">
           <img src="/img/WESTIN.webp" width="320" height="210" loading="lazy" decoding="async" fetchpriority="low"
             style="aspect-ratio: 320 / 210; object-fit: cover;" alt="The Westin Residences Whiteland">
           <div class="property-info">
