--- a/max361/index.html
+++ b/max361/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Max Estate 361 Sector 36A Gurugram | Luxury 3 & 4 BHK Residences</title>
-  <meta name="description" content="Max Estate 361 Sector 36A Gurugram offers luxury 3 & 4 BHK wellness residences by Max Estates near Dwarka Expressway. Get price, floor plans & brochure.">
+  <meta name="description"
+    content="Max Estate 361 Sector 36A Gurugram offers luxury 3 & 4 BHK wellness residences by Max Estates near Dwarka Expressway. Get price, floor plans & brochure.">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <link rel="stylesheet" href="/editing/max361.css">
   <link rel="canonical" href="https://apexlandbase.com/max-estate-361">
@@ -327,7 +328,10 @@
 
         <button type="submit" class="apex-submit-btn">Submit</button>
       </form>
-
+    </div>
+    <div id="thankYouToast" class="toast">
+      <strong>Thank you!</strong><br>
+      Our team will contact you shortly.
     </div>
   </div>
 
@@ -406,22 +410,22 @@
 
   </div>
   <!-- EMAILJS -->
-<script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js" defer></script>
-<script>
-  emailjs.init("Jt6Vp9_-hORbbxZ79");
-</script>
+  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+  <script>
+    emailjs.init("Jt6Vp9_-hORbbxZ79");
+  </script>
 
-<!-- SUPABASE -->
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2" defer></script>
-<script>
-  const SUPABASE_URL = "https://naipydrihdzbjohfrypu.supabase.co";
-  const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5haXB5ZHJpaGR6YmpvaGZyeXB1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY4OTgwODUsImV4cCI6MjA4MjQ3NDA4NX0.JlRuujtS0t8G67X7RYqWVvxuqvRhFgqeng8OOlELJok";
+  <!-- SUPABASE -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script>
+    const SUPABASE_URL = "https://naipydrihdzbjohfrypu.supabase.co";
+    const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5haXB5ZHJpaGR6YmpvaGZyeXB1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY4OTgwODUsImV4cCI6MjA4MjQ3NDA4NX0.JlRuujtS0t8G67X7RYqWVvxuqvRhFgqeng8OOlELJok";
 
-  window.supabase = window.supabase.createClient(
-    SUPABASE_URL,
-    SUPABASE_KEY
-  );
-</script>
+    window.supabase = supabase.createClient(
+      SUPABASE_URL,
+      SUPABASE_KEY
+    );
+  </script>
   <script src="/js/max.js" defer></script>
 
 </body>
