--- a/shobha/index.html
+++ b/shobha/index.html
@@ -242,16 +242,19 @@
       </div>
 
       <form id="apexLeadForm" class="apex-lead-form" autocomplete="off">
-        <input type="text" id="apex-name" placeholder="Your Name">
-        <input type="email" id="apex-email" placeholder="Email Address">
-        <input type="tel" id="apex-phone" placeholder="Phone Number">
+        <input type="text" id="apex-name" placeholder="Your Name" aria-label="Your Name">
+        <input type="email" id="apex-email" placeholder="Email Address" aria-label="Email Address">
+        <input type="tel" id="apex-phone" placeholder="Phone Number" aria-label="Phone Number">
 
         <!-- page tracking -->
         <input type="hidden" id="apex-page">
 
         <button type="submit" class="apex-submit-btn">Submit</button>
       </form>
-
+    </div>
+    <div id="thankYouToast" class="toast">
+      <strong>Thank you!</strong><br>
+      Our team will contact you shortly.
     </div>
   </div>
   <!-- ================= CONTACT ================= -->
@@ -316,18 +319,18 @@
 
   </div>
   <!-- EMAILJS -->
-  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <script>
     emailjs.init("Jt6Vp9_-hORbbxZ79");
   </script>
 
   <!-- SUPABASE -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script>
     const SUPABASE_URL = "https://naipydrihdzbjohfrypu.supabase.co";
     const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5haXB5ZHJpaGR6YmpvaGZyeXB1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY4OTgwODUsImV4cCI6MjA4MjQ3NDA4NX0.JlRuujtS0t8G67X7RYqWVvxuqvRhFgqeng8OOlELJok";
 
-    window.supabase = window.supabase.createClient(
+    window.supabase = supabase.createClient(
       SUPABASE_URL,
       SUPABASE_KEY
     );
