websites update html css js

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         </a>
 
         <!-- ASHIANA AAROHAM -->
-        <a href="" class="property-card">
+        <a href="/ashiana/index.html" class="property-card">
           <img src="/img/ASHIANA.A.webp" width="320" height="210" loading="lazy" decoding="async" fetchpriority="low"
             style="aspect-ratio: 320 / 210; object-fit: cover;" alt="Ashiana Aaroham">
           <div class="property-info">
