website updates html css js

--- a/about.html
+++ b/about.html
@@ -27,32 +27,26 @@
   </header>
 
   <!-- ========== NAVBAR (same style) ========== -->
-  <nav class="navbar">
-    <div class="nav-container">
-      <div class="logo">
-        <img src="/img/image.png" alt="Apex Landbase logo">
-        <span class="brand">APEX LANDBASE</span>
+  <!-- CENTER: menu -->
+
+  <ul class="nav-list">
+    <li><a href="index.html">Home</a></li>
+    <li class="dropdown">
+      <a href="javascript:void(0)" class="dropbtn">Projects ▾</a>
+      <div class="dropdown-content">
+        <a href="residential.html">Residential</a>
+        <a href="commercial.html">Commercial</a>
       </div>
+    </li>
+    <li><a href="awards.html">Awards</a></li>
+    <li><a href="contact.html">Contact us</a></li>
+  </ul>
 
-      <ul class="nav-list">
-        <select></select>
-        <li><a href="index.html">Home</a></li>
-
-        <li class="dropdown">
-          <a href="#" class="dropbtn">Projects ▾</a>
-          <div class="dropdown-content">
-            <a href="residential.html">Residential</a>
-            <a href="commercial.html">Commercial</a>
-          </div>
-        </li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact us</a></li>
-      </ul>
-
-      <div class="nav-actions">
-        <a class="contact-btn" href="index.html#contact">Contact Now</a>
-      </div>
-    </div>
+  <!-- RIGHT: contact button -->
+  <div class="nav-actions">
+    <button id="contactBtn" class="contact-btn" aria-label="Contact Apex Landbase">Contact Now</button>
+  </div>
+  </div>
   </nav>
 
   <main>
@@ -228,7 +222,7 @@
     </div>
 
     <div class="footer-bottom">
-      <p>copyright © 2026, apexlandbase | Made By Yogita (yogita11i.sns@gmail.com)</p>
+      <p>copyright © 2026, apexlandbase</p>
     </div>
   </footer>
 
