--- a/contact.html
+++ b/contact.html
@@ -41,30 +41,25 @@
   </header>
 
   <!-- ================= NAVBAR ================= -->
-  <nav class="navbar">
-    <div class="nav-container">
 
-      <div class="logo">
-        <img src="/img/image.png" alt="Apex Landbase Logo">
-        <span class="brand">APEX LANDBASE</span>
+  <ul class="nav-list">
+    <li><a href="index.html">Home</a></li>
+    <li class="dropdown">
+      <a href="javascript:void(0)" class="dropbtn">Projects ▾</a>
+      <div class="dropdown-content">
+        <a href="residential.html">Residential</a>
+        <a href="commercial.html">Commercial</a>
       </div>
+    </li>
+    <li><a href="awards.html">Awards</a></li>
+    <li><a href="contact.html">Contact us</a></li>
+  </ul>
 
-      <ul class="nav-list">
-        <li><a href="index.html">Home</a></li>
-
-        <li class="dropdown">
-          <a class="dropbtn">Projects ▾</a>
-          <div class="dropdown-content">
-            <a href="residential.html">Residential</a>
-            <a href="commercial.html">Commercial</a>
-          </div>
-        </li>
-        <li><a href="#Awards">Awards</a></li>
-
-
-        <li><a href="contact.html" class="active">Contact Us</a></li>
-      </ul>
-    </div>
+  <!-- RIGHT: contact button -->
+  <div class="nav-actions">
+    <button id="contactBtn" class="contact-btn" aria-label="Contact Apex Landbase">Contact Now</button>
+  </div>
+  </div>
   </nav>
 
   <!-- ================= CONTACT PAGE ================= -->
@@ -153,7 +148,7 @@
 
     </div>
   </main>
-      <!-- ===== footer ===== -->
+  <!-- ===== footer ===== -->
 
   <footer class="main-footer">
     <div class="footer-container">
@@ -197,7 +192,7 @@
     </div>
 
     <div class="footer-bottom">
-      <p>copyright © 2025, apexlandbase | Made By Yogita (yogita11i.sns@gmail.com)</p>
+      <p>copyright © 2025, apexlandbase</p>
     </div>
   </footer>
 
