--- a/index.html
+++ b/index.html
@@ -66,20 +66,18 @@
       </a>
       <!-- MENUE BUTTON-->
       <button class="menu-btn" aria-label="Open Menu">☰</button>
-
       <!-- CENTER: menu -->
 
       <ul class="nav-list">
-        <select></select>
         <li><a href="index.html">Home</a></li>
         <li class="dropdown">
-          <a href="#" class="dropbtn">Projects ▾</a>
+          <a href="javascript:void(0)" class="dropbtn">Projects ▾</a>
           <div class="dropdown-content">
             <a href="residential.html">Residential</a>
             <a href="commercial.html">Commercial</a>
           </div>
         </li>
-        <li><a href="#awards">Awards</a></li>
+        <li><a href="awards.html">Awards</a></li>
         <li><a href="contact.html">Contact us</a></li>
       </ul>
 
