--- a/terms-condition.html
+++ b/terms-condition.html
@@ -55,30 +55,24 @@
     </div>
   </header>
 
-  <!-- NAVBAR (index.html se copy) -->
-  <nav class="navbar">
-    <div class="nav-container">
-      <div class="logo">
-        <img src="/img/image.png" alt="Apex Landbase logo">
-        <span class="brand">APEX LANDBASE</span>
-      </div>
+   <!-- CENTER: menu -->
 
       <ul class="nav-list">
-        <select></select>
         <li><a href="index.html">Home</a></li>
         <li class="dropdown">
-          <a href="#" class="dropbtn">Projects ▾</a>
+          <a href="javascript:void(0)" class="dropbtn">Projects ▾</a>
           <div class="dropdown-content">
             <a href="residential.html">Residential</a>
             <a href="commercial.html">Commercial</a>
           </div>
         </li>
-        <li><a href="index.html#awards">Awards</a></li>
+        <li><a href="awards.html">Awards</a></li>
         <li><a href="contact.html">Contact us</a></li>
       </ul>
 
+      <!-- RIGHT: contact button -->
       <div class="nav-actions">
-        <a class="contact-btn" href="index.html#contact">Contact Now</a>
+        <button id="contactBtn" class="contact-btn" aria-label="Contact Apex Landbase">Contact Now</button>
       </div>
     </div>
   </nav>
@@ -180,7 +174,7 @@
     </div>
 
     <div class="footer-bottom">
-      <p>copyright © 2026, apexlandbase | Made By Yogita (yogita11i.sns@gmail.com)</p>
+      <p>copyright © 2026, apexlandbase</p>
     </div>
   </footer>
 
