--- a/ashiana/index.html
+++ b/ashiana/index.html
@@ -205,7 +205,7 @@
     <div class="apex-amenities-wrap">
 
       <div class="amenities-content">
-        <h2>Amenities</h2>
+        <h2 class="section-heading">Amenities</h2>
 
         <ul class="amenities-divider-list">
           <li>Vehicular-free podium level</li>
@@ -240,7 +240,7 @@
       </div>
       <div class="master-content">
 
-        <h2 class="apex-title">Master Plan</h2>
+        <h2 class="section-heading">Master Plan</h2>
         <span class="apex-line"></span>
         <p>
           Thoughtfully designed layout prioritizing safety, visibility, interconnected activity zones and green
