--- a/shobha/index.html
+++ b/shobha/index.html
@@ -241,20 +241,16 @@
         <p>Register now to receive price, floor plan & offers</p>
       </div>
 
-      <form id="apexLeadForm" class="apex-lead-form" autocomplete="off">
-        <input type="text" id="apex-name" placeholder="Your Name" aria-label="Your Name">
-        <input type="email" id="apex-email" placeholder="Email Address" aria-label="Email Address">
-        <input type="tel" id="apex-phone" placeholder="Phone Number" aria-label="Phone Number">
+      <form id="apexLeadForm1" class="apex-lead-form" autocomplete="off">
+        <input type="text" id="apex-name1" placeholder="Your Name" aria-label="Your Name">
+        <input type="email" id="apex-email1" placeholder="Email Address" aria-label="Email Address">
+        <input type="tel" id="apex-phone1" placeholder="Phone Number" aria-label="Phone Number">
 
         <!-- page tracking -->
-        <input type="hidden" id="apex-page">
+        <input type="hidden" id="apex-page1">
 
         <button type="submit" class="apex-submit-btn">Submit</button>
       </form>
-    </div>
-    <div id="thankYouToast" class="toast">
-      <strong>Thank you!</strong><br>
-      Our team will contact you shortly.
     </div>
   </div>
   <!-- ================= CONTACT ================= -->
@@ -273,16 +269,20 @@
           <li>✔ Marketed by Apex Landbase</li>
         </ul>
       </div>
-
-      <form class="contact-form">
-        <input type="text" placeholder="Your Name" required>
-        <input type="tel" placeholder="Phone Number" required>
-        <input type="email" placeholder="Email" required>
+      <form id="contactForm1" class="contact-form">
+        <input type="text" id="contact-name1" placeholder="Your Name" required>
+        <input type="tel" id="contact-phone1" placeholder="Phone Number" required>
+        <input type="email" id="contact-email1" placeholder="Email" required>
         <button type="submit">Submit Enquiry</button>
       </form>
 
     </div>
   </section>
+  <!-- ===== GLOBAL TOAST ===== -->
+  <div id="thankYouToast" class="toast">
+    <strong>Thank you!</strong><br>
+    Our team will contact you shortly.
+  </div>
 
   <!-- ================= FOOTER ================= -->
   <footer class="lp-footer">
