--- a/contact.html
+++ b/contact.html
@@ -15,51 +15,55 @@
   <link rel="stylesheet" href="/editing/CSS/contact.css">
 </head>
 
+
 <body>
 
-  <!-- ================= TOP HEADER ================= -->
+  <!-- TOP HEADER -->
   <header class="top-header">
-    <p>
-      Call Now Best Real Estate Consultation:
-      <a href="tel::+91 9999074263">:+91 9999074263</a>
-    </p>
+    <p>Call Now Best Real Estate Consultation: <a href="tel:+919999074263">+91 9999074263</a></p>
 
     <div class="social-icons">
-      <a href="https://www.facebook.com/ApexLandbase">
-        <img src="/img/fb.png" alt="Facebook">
-      </a>
-      <a href="https://www.instagram.com/apexlandbase">
-        <img src="/img/insta.png" alt="Instagram">
-      </a>
-      <a href="https://www.youtube.com/@apexlandbase">
-        <img src="/img/youtube.png" alt="YouTube">
-      </a>
-      <a href="https://twitter.com/ApexLandbase">
-        <img src="/img/twitter.png" alt="Twitter">
-      </a>
+      <a href="https://www.facebook.com/ApexLandbase" target="_blank"><img src="/img/fb.png" loading="lazy"
+          alt="facebook" /></a>
+      <a href="https://www.instagram.com/apexlandbase" target="_blank"><img src="/img/insta.png" loading="lazy"
+          alt="instagram" /></a>
+      <a href="https://www.youtube.com/@apexlandbase" target="_blank"><img src="/img/youtube.png" loading="lazy"
+          alt="youtube" /></a>
+      <a href="https://www.twitter.com/ApexLandbase" target="_blank"><img src="/img/twitter.png" loading="lazy"
+          alt="twitter Apex Landbase" /></a>
     </div>
   </header>
 
-  <!-- ================= NAVBAR ================= -->
+  <!-- NAVBAR -->
+  <nav class="navbar" aria-label="Primary Navigation">
+    <div class="nav-container">
+      <!-- LEFT: Logo -->
+      <a href="index.html" class="logo" aria-label="Apex Landbase Home">
+        <img src="/img/image.png" alt="Apex Landbase logo" fetchpriority="high">
+        <span class="brand">APEX LANDBASE</span>
+      </a>
+      <!-- MENUE BUTTON-->
+      <button class="menu-btn" aria-label="Open Menu">☰</button>
+      <!-- CENTER: menu -->
 
-  <ul class="nav-list">
-    <li><a href="index.html">Home</a></li>
-    <li class="dropdown">
-      <a href="javascript:void(0)" class="dropbtn">Projects ▾</a>
-      <div class="dropdown-content">
-        <a href="residential.html">Residential</a>
-        <a href="commercial.html">Commercial</a>
+      <ul class="nav-list">
+        <li><a href="index.html">Home</a></li>
+        <li class="dropdown">
+          <a href="javascript:void(0)" class="dropbtn">Projects ▾</a>
+          <div class="dropdown-content">
+            <a href="residential.html">Residential</a>
+            <a href="commercial.html">Commercial</a>
+          </div>
+        </li>
+        <li><a href="awards.html">Awards</a></li>
+        <li><a href="contact.html">Contact us</a></li>
+      </ul>
+
+      <!-- RIGHT: contact button -->
+      <div class="nav-actions">
+        <button id="contactBtn" class="contact-btn" aria-label="Contact Apex Landbase">Contact Now</button>
       </div>
-    </li>
-    <li><a href="awards.html">Awards</a></li>
-    <li><a href="contact.html">Contact us</a></li>
-  </ul>
-
-  <!-- RIGHT: contact button -->
-  <div class="nav-actions">
-    <button id="contactBtn" class="contact-btn" aria-label="Contact Apex Landbase">Contact Now</button>
-  </div>
-  </div>
+    </div>
   </nav>
 
   <!-- ================= CONTACT PAGE ================= -->
@@ -148,7 +152,7 @@
 
     </div>
   </main>
-  <!-- ===== footer ===== -->
+      <!-- ===== footer ===== -->
 
   <footer class="main-footer">
     <div class="footer-container">
@@ -192,7 +196,7 @@
     </div>
 
     <div class="footer-bottom">
-      <p>copyright © 2025, apexlandbase</p>
+      <p>copyright © 2025, apexlandbase | Made By Yogita (yogita11i.sns@gmail.com)</p>
     </div>
   </footer>
 
