--- a/privacy.html
+++ b/privacy.html
@@ -55,11 +55,19 @@
     <a href="https://www.twitter.com/ApexLandbase" target="_blank"><img src="/img/twitter.png"></a>
   </div>
 </header>
-
- <!-- CENTER: menu -->
+<!-- NAVBAR -->
+  <nav class="navbar" aria-label="Primary Navigation">
+    <div class="nav-container">
+      <!-- LEFT: Logo -->
+      <a href="index.html" class="logo" aria-label="Apex Landbase Home">
+        <img src="/img/image.png" alt="Apex Landbase logo" fetchpriority="high">
+        <span class="brand">APEX LANDBASE</span>
+      </a>
+      <!-- MENUE BUTTON-->
+      <button class="menu-btn" aria-label="Open Menu">☰</button>
+      <!-- CENTER: menu -->
 
       <ul class="nav-list">
-        
         <li><a href="index.html">Home</a></li>
         <li class="dropdown">
           <a href="javascript:void(0)" class="dropbtn">Projects ▾</a>
@@ -72,12 +80,6 @@
         <li><a href="contact.html">Contact us</a></li>
       </ul>
 
-      <!-- RIGHT: contact button -->
-      <div class="nav-actions">
-        <button id="contactBtn" class="contact-btn" aria-label="Contact Apex Landbase">Contact Now</button>
-      </div>
-    </div>
-  </nav>
 
 <!-- ================= PRIVACY CONTENT ================= -->
 <main>
