--- a/terms-condition.html
+++ b/terms-condition.html
@@ -40,22 +40,36 @@
     }
   </style>
 </head>
+
 <body>
 
-  <!-- TOP HEADER (index.html se copy) -->
+  <!-- TOP HEADER -->
   <header class="top-header">
-    <p>Call Now Best Real Estate Consultation:
-      <a href="tel::+919999074263">:+91 9999074263</a>
-    </p>
+    <p>Call Now Best Real Estate Consultation: <a href="tel:+919999074263">+91 9999074263</a></p>
+
     <div class="social-icons">
-      <a href="https://www.facebook.com/ApexLandbase" target="_blank"><img src="/img/fb.png" alt="facebook" /></a>
-      <a href="https://www.instagram.com/apexlandbase" target="_blank"><img src="/img/insta.png" alt="instagram" /></a>
-      <a href="https://www.youtube.com/ApexLandbase" target="_blank"><img src="/img/youtube.png" alt="youtube" /></a>
-      <a href="https://www.twitter.com/ApexLandbase" target="_blank"><img src="/img/twitter.png" alt="twitter" /></a>
+      <a href="https://www.facebook.com/ApexLandbase" target="_blank"><img src="/img/fb.png" loading="lazy"
+          alt="facebook" /></a>
+      <a href="https://www.instagram.com/apexlandbase" target="_blank"><img src="/img/insta.png" loading="lazy"
+          alt="instagram" /></a>
+      <a href="https://www.youtube.com/@apexlandbase" target="_blank"><img src="/img/youtube.png" loading="lazy"
+          alt="youtube" /></a>
+      <a href="https://www.twitter.com/ApexLandbase" target="_blank"><img src="/img/twitter.png" loading="lazy"
+          alt="twitter Apex Landbase" /></a>
     </div>
   </header>
 
-   <!-- CENTER: menu -->
+  <!-- NAVBAR -->
+  <nav class="navbar" aria-label="Primary Navigation">
+    <div class="nav-container">
+      <!-- LEFT: Logo -->
+      <a href="index.html" class="logo" aria-label="Apex Landbase Home">
+        <img src="/img/image.png" alt="Apex Landbase logo" fetchpriority="high">
+        <span class="brand">APEX LANDBASE</span>
+      </a>
+      <!-- MENUE BUTTON-->
+      <button class="menu-btn" aria-label="Open Menu">☰</button>
+      <!-- CENTER: menu -->
 
       <ul class="nav-list">
         <li><a href="index.html">Home</a></li>
