website updates html css js

--- a/privacy.html
+++ b/privacy.html
@@ -41,21 +41,26 @@
     }
   </style>
 </head>
+
 <body>
 
-<!-- ================= TOP HEADER ================= -->
-<header class="top-header">
-  <p>Call Now Best Real Estate Consultation:
-    <a href="tel::+919999074263">:+91 9999074263</a>
-  </p>
-  <div class="social-icons">
-    <a href="https://www.facebook.com/ApexLandbase" target="_blank"><img src="/img/fb.png"></a>
-    <a href="https://www.instagram.com/apexlandbase" target="_blank"><img src="/img/insta.png"></a>
-    <a href="https://www.youtube.com/@apexlandbase" target="_blank"><img src="/img/youtube.png"></a>
-    <a href="https://www.twitter.com/ApexLandbase" target="_blank"><img src="/img/twitter.png"></a>
-  </div>
-</header>
-<!-- NAVBAR -->
+  <!-- TOP HEADER -->
+  <header class="top-header">
+    <p>Call Now Best Real Estate Consultation: <a href="tel:+919999074263">+91 9999074263</a></p>
+
+    <div class="social-icons">
+      <a href="https://www.facebook.com/ApexLandbase" target="_blank"><img src="/img/fb.png" loading="lazy"
+          alt="facebook" /></a>
+      <a href="https://www.instagram.com/apexlandbase" target="_blank"><img src="/img/insta.png" loading="lazy"
+          alt="instagram" /></a>
+      <a href="https://www.youtube.com/@apexlandbase" target="_blank"><img src="/img/youtube.png" loading="lazy"
+          alt="youtube" /></a>
+      <a href="https://www.twitter.com/ApexLandbase" target="_blank"><img src="/img/twitter.png" loading="lazy"
+          alt="twitter Apex Landbase" /></a>
+    </div>
+  </header>
+
+  <!-- NAVBAR -->
   <nav class="navbar" aria-label="Primary Navigation">
     <div class="nav-container">
       <!-- LEFT: Logo -->
@@ -80,8 +85,12 @@
         <li><a href="contact.html">Contact us</a></li>
       </ul>
 
-
-<!-- ================= PRIVACY CONTENT ================= -->
+      <!-- RIGHT: contact button -->
+      <div class="nav-actions">
+        <button id="contactBtn" class="contact-btn" aria-label="Contact Apex Landbase">Contact Now</button>
+      </div>
+    </div>
+  </nav>=== PRIVACY CONTENT ================= -->
 <main>
   <div class="legal-wrapper">
 
