websites update html css js

--- a/privacy.html
+++ b/privacy.html
@@ -90,7 +90,8 @@
         <button id="contactBtn" class="contact-btn" aria-label="Contact Apex Landbase">Contact Now</button>
       </div>
     </div>
-  </nav>=== PRIVACY CONTENT ================= -->
+  </nav>
+  <!------== PRIVACY CONTENT ================= -->
 <main>
   <div class="legal-wrapper">
 
